Updated events page and fixed inactive menu on small screens.

--- a/css/events.css
+++ b/css/events.css
@@ -28,23 +28,23 @@ body{
     url(../images/events/magician.jpg);
   background-size: cover;
   background-position: center;
-
 }
 
 .content {
   width: 100%;
   position: absolute;
   top: 40%;
-  transform: translateY(-50%);
+  /* transform: translateY(-50%); */
   text-align: center;
-
 }
 
 .content h1 {
   font-size: 70px;
+  font-size: 4rem;
   margin-top: 125px;
   font-family: 'Allura', 'Neonderthaw', cursive;
   color: white;
+  transition: all 0.3s;
 }
 
 .content p {
@@ -53,6 +53,13 @@ body{
   line-height: 25px;
   font-size: 24px;
   color: white;
+  transition: all 0.3s;
+}
+
+.content h1:hover,
+.content p:hover {
+  color: var(--navbar-color-hover);
+  transition: all 0.3s;
 }
 
 .event-container {
@@ -197,6 +204,7 @@ body{
 }
 
 @media screen and (max-width: 950px) {
+  
   .event-container {
     grid-template-columns: 1fr 1fr;
     gap: 1.2rem;
